# bash_scripts_scheduler

./: .Makefile.kate-swp  Makefile  Makefile_alpha.txt  README.md  pyproject.toml
assets/: dummy_task.sh  schedule.yaml
docs/: docs_alpha.txt  docs_bravo.txt  docs_charlie.txt  docs_delta.txt  docs_echo.txt  docs_foxtrot.txt
scripts/: scheduler_alpha.py
src/bash_scripts_scheduler/: __init__.py  core.py  core_alpha.py
