[project]
name = "bash-scripts-scheduler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "DanielBerns", email = "daniel.w.berns@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "python-crontab>=3.3.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
bash-scripts-scheduler = "bash_scripts_scheduler:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
